margin on small screens fixed

--- a/src/styles/blocks/testimonials.scss
+++ b/src/styles/blocks/testimonials.scss
@@ -59,5 +59,9 @@
     @media (min-width: $mobileWidthPoint) {
       margin-bottom: 0;
     }
+
+    &--last {
+      margin-bottom: 0;
+    }
   }
 }
